# plug-and-produce

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  run_real_template.in.sh  run_sim_template.in.sh  run_ur5_alpha_template.in.sh
.github/workflows/: main.yml
configs/: composite-skills.cfg  robotiq-2f.cfg  schmalz-ecbpi.cfg  semantic-mes-alpha.cfg  semantic-mes-sim.cfg  semantic-mes.cfg  toolchanger-alpha.cfg  ur5-alpha.cfg
configs/real/: composite-skills.cfg  toolchanger-alpha.cfg  ur5-alpha.cfg
gripper/robotiq-2f/: .gitignore  CMakeLists.txt  CMakeLists.txt.old  LICENSE  README.md  flash.sh  gripper.cfg  nodes_blacklist.txt  sdkconfig
gripper/robotiq-2f/components/open62541/: CMakeLists.txt
gripper/robotiq-2f/main/: CMakeLists.txt  GripperOPCUA.cpp  GripperOPCUA.h  Serial.cpp  Serial.h  SimGripper.cpp  SimGripper.h  TinyPico.cpp  main.cpp  main_local.cpp  opcua_task.hpp
gripper/robotiq-2f/main/impl/: GraspGripperSkillImpl.hpp  MoveGripperSkill.hpp  MoveGripperSkillImpl.hpp  ReleaseGripperSkillImpl.hpp
gripper/robotiq-2f/main/opcua/: Robotiq2FModel.csv  build.sh
gripper/robotiq-2f/main/opcua/Published/Robotiq/: Robotiq2FModel.xml  robotiq.Classes.cs  robotiq.Constants.cs  robotiq.DataTypes.cs  robotiq.NodeSet.xml  robotiq.NodeSet2.xml  robotiq.PredefinedNodes.uanodes  robotiq.PredefinedNodes.xml  robotiq.Types.bsd  robotiq.Types.xsd
gripper/robotiq-2f/main/rl/hal/: Exception.cpp  RobotiqModelC.cpp  RobotiqModelC.h  export.h
gripper/robotiq-2f/main/rl/math/: Real.h
gripper/robotiq-2f/tools/OpenOCD/: feather_esp32.cfg
gripper/schmalz-ecbpi/: CMakeLists.txt  README.md  gripper.cfg  sdkconfig
gripper/schmalz-ecbpi/components/iolink/: CMakeLists.txt
gripper/schmalz-ecbpi/components/iolink/inc/: iolma_config.h
gripper/schmalz-ecbpi/components/open62541/: CMakeLists.txt
gripper/schmalz-ecbpi/main/: CMakeLists.txt  GripperOPCUA.cpp  GripperOPCUA.h  Serial.cpp  Serial.h  SimGripper.cpp  SimGripper.h  TinyPico.h  constants.h  main.cpp  main_local.cpp  opcua_task.hpp
gripper/schmalz-ecbpi/main/impl/: GraspGripperSkillImpl.hpp  ReleaseGripperSkillImpl.hpp
gripper/schmalz-ecbpi/main/opcua/: SchmalzEcbpiModel.csv  build.sh
gripper/schmalz-ecbpi/main/opcua/Published/SchmalzEcbpi/: SchmalzEcbpiModel.csv  SchmalzEcbpiModel.xml  schmalz.Classes.cs  schmalz.Constants.cs  schmalz.DataTypes.cs  schmalz.NodeSet.xml  schmalz.NodeSet2.xml  schmalz.PredefinedNodes.uanodes  schmalz.PredefinedNodes.xml  schmalz.Types.bsd  schmalz.Types.xsd
models/: cube.wrl  demo.wrl  demo.xml  dockingstation-up-simple.wrl  environment.wrl  robot.wrl  schmalz-ecbpi.wrl  tables.wrl  toolplate.wrl  ur5-alpha-mdl.xml  ur5-bravo-mdl.xml
robot/universal-robots/: .gitignore  CMakeLists.txt  README.md  universal-robots.cfg
robot/universal-robots/opcua/: UA Model Design.xsd  build.sh  universalRobotsModel.csv  universalRobotsModel.xml
robot/universal-robots/opcua/Published/universalRobots/: universalRobotsModel.xml  universal_robots.Classes.cs  universal_robots.Constants.cs  universal_robots.NodeSet.xml  universal_robots.NodeSet2.xml  universal_robots.PredefinedNodes.uanodes  universal_robots.PredefinedNodes.xml  universal_robots.Types.bsd  universal_robots.Types.xsd
robot/universal-robots/src/: CMakeLists.txt  UniversalRobotControl.cpp  UniversalRobotControl.h  main.cpp
software/composite-skills/: .gitignore  CMakeLists.txt  README.md  component.cfg
software/composite-skills/opcua/: CompositeSkillsModel.csv  CompositeSkillsModel.xml  build.sh
software/composite-skills/opcua/Published/CompositeSkills/: CompositeSkills.Classes.cs  CompositeSkills.Constants.cs  CompositeSkills.DataTypes.cs  CompositeSkills.NodeSet.xml  CompositeSkills.NodeSet2.xml  CompositeSkills.PredefinedNodes.uanodes  CompositeSkills.PredefinedNodes.xml  CompositeSkills.Types.bsd  CompositeSkills.Types.xsd  CompositeSkillsModel.csv  CompositeSkillsModel.xml
software/composite-skills/src/: CMakeLists.txt  CompositeSkills.cpp  CompositeSkills.h  PickAndPlaceSkill.hpp  PickAndPlaceSkillImpl.cpp  PickAndPlaceSkillImpl.h  main.cpp
software/kelvin-toolchanger/: CMakeLists.txt  README.md  component.cfg
software/kelvin-toolchanger/opcua/: KelvinToolchangerModel.csv  KelvinToolchangerModel.xml  build.sh
software/kelvin-toolchanger/opcua/Published/KelvinToolchanger/: KelvinToolchanger.Classes.cs  KelvinToolchanger.Constants.cs  KelvinToolchanger.DataTypes.cs  KelvinToolchanger.NodeSet.xml  KelvinToolchanger.NodeSet2.xml  KelvinToolchanger.PredefinedNodes.uanodes  KelvinToolchanger.PredefinedNodes.xml  KelvinToolchanger.Types.bsd  KelvinToolchanger.Types.xsd  KelvinToolchangerModel.xml
software/kelvin-toolchanger/src/: AdcAdapter.cpp  AdcAdapter.h  CMakeLists.txt  ChangeToolSkill.hpp  ChangeToolSkillImpl.cpp  ChangeToolSkillImpl.h  DropToolSkill.hpp  DropToolSkillImpl.cpp  DropToolSkillImpl.h  KelvinToolchanger.cpp  KelvinToolchanger.h  main.cpp
software/semantic-mes/: .gitignore  CMakeLists.txt  README.md  component.cfg
software/semantic-mes/opcua/: SemanticMESModel.csv  SemanticMESModel.xml  build.sh
software/semantic-mes/opcua/Published/SemanticMES/: SemanticMES.Classes.cs  SemanticMES.Constants.cs  SemanticMES.DataTypes.cs  SemanticMES.NodeSet.xml  SemanticMES.NodeSet2.xml  SemanticMES.PredefinedNodes.uanodes  SemanticMES.PredefinedNodes.xml  SemanticMES.Types.bsd  SemanticMES.Types.xsd
software/semantic-mes/src/: ExecuteProcessSkill.hpp  ExecuteProcessSkillImpl.cpp  ExecuteProcessSkillImpl.h  SemanticMes.cpp  SemanticMes.h  main.cpp
software/semantic-mes/src/pnp-demo/: PnpSemanticMes.cpp  PnpSemanticMes.h
